--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "date-fns": "^2.25.0",
     "dayjs": "^1.11.13",
     "formik": "^2.4.6",
+    "jwt-decode": "^4.0.0",
     "nodemailer": "^6.9.16",
     "pdfkit": "^0.16.0",
     "react": "^19.0.0",
