--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "dayjs": "^1.11.13",
     "formik": "^2.4.6",
     "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.474.0",
     "nodemailer": "^6.9.16",
     "pdfkit": "^0.16.0",
     "react": "^19.0.0",
