--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "@mui/material": "^6.3.1",
     "@mui/x-date-pickers": "^7.23.3",
     "axios": "^1.7.9",
+    "bcryptjs": "^2.4.3",
     "bootstrap": "^5.3.3",
     "cra-template": "1.2.0",
     "date-fns": "^2.25.0",
