--- a/package.json
+++ b/package.json
@@ -38,6 +38,8 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
+  "proxy": "http://localhost:8001",
+
   "eslintConfig": {
     "extends": [
       "react-app",
