--- a/package.json
+++ b/package.json
@@ -37,7 +37,7 @@
     "predeploy": "npm run build",
     "deploy": "gh-pages -d build"
   },
-  "proxy": "http://localhost:8001",
+  "proxy": "https://temp.6513.in",
   "eslintConfig": {
     "extends": [
       "react-app",
