--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-scripts": "5.0.1",
     "react-toastify": "^11.0.2",
     "web-vitals": "^4.2.4",
+    "xlsx": "^0.18.5",
     "yup": "^1.6.1"
   },
   "scripts": {
