--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "react-router-dom": "^7.1.1",
     "react-scripts": "5.0.1",
     "react-toastify": "^11.0.2",
+    "recharts": "^2.15.2",
     "web-vitals": "^4.2.4",
     "xlsx": "^0.18.5",
     "yup": "^1.6.1"
